--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "axios": "^1.2.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -36,6 +37,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "nodemon": "^2.0.20",
     "typescript": "~4.6.2"
   }
 }
