--- a/package.json
+++ b/package.json
@@ -18,12 +18,10 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@netlify/functions": "^1.3.0",
     "axios": "^1.2.1",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.6",
