Proxy works, error in node

--- a/angular.json
+++ b/angular.json
@@ -73,11 +73,11 @@
           "configurations": {
             "production": {
               "browserTarget": "Angular:build:production",
-              "proxyConfig": "src/proxy.conf.json"
+              "proxyConfig": "proxy.conf.json"
             },
             "development": {
               "browserTarget": "Angular:build:development",
-              "proxyConfig": "src/proxy.conf.json"
+              "proxyConfig": "proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
