fix node backend

--- a/angular.json
+++ b/angular.json
@@ -85,7 +85,9 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Angular:build"
+            "browserTarget": "Angular:build",
+            "allowedCommonJsDependencies": ["lodash"],
+            "proxyConfig": "proxy.conf.json"
           }
         },
         "test": {
@@ -109,5 +111,7 @@
       }
     }
   },
-  "defaultProject": "Angular"
+  "cli": {
+    "analytics": false
+  }
 }
