--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "ng serve && node server.js",
+    "build": "ng build && node server.js",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
