fix start script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js && ng serve",
-    "build": "node server.js && ng build",
+    "build": "ng build && node server.js",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
