--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-command ='ng build'
+command ='npm run build'
 functions = 'functions'
-publish = 'functions'
+publish = 'dist/angular/functions'
