--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@netlify/functions": "^1.3.0",
     "axios": "^1.2.1",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.10",
